--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -31,7 +31,7 @@
     height:60px;
 }
 
-.nav-text a {
+.nav-text {
     text-decoration: none;
     color:aliceblue;
     font-size: 18px;
@@ -43,7 +43,7 @@
     border-radius: 4px;
 }
 
-.nav-text a:hover{
+.nav-text:hover{
     background-color: #fff;
     margin-left: 10px;
     color: blue;
@@ -75,3 +75,42 @@ span{
 .react-icons:hover{
     color: black;
 }
+.tooltip{
+    position: relative;
+}
+
+.tooltip .tooltiptext{
+    visibility: hidden;
+    width:120px;
+    background-color: black;
+    color:#fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+
+    position:absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext{
+    visibility: visible;
+}
+
+/* .menu-primary-enter{*/
+/*    position: absolute;*/
+/*    transform:translateY(-110%);*/
+/*}*/
+
+/*.menu-primary-enter-active{*/
+/*    transform:translateY(0%);*/
+/*    transition:all 100ms ease;*/
+/*}*/
+
+/*.menu-primary-exit{*/
+/*    position: absolute;*/
+/*}*/
+
+/*.menu-primary-exit-active{*/
+/*    transform: translateY(-110%);*/
+/*    transition: all 100ms ease;*/
+/*} */
