--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,9 @@
   align-items: center;
   justify-content: center;
   font-size: 3rem;
+  color:#fff;
 }
-
-:root{
+ :root{
   --bg:#242526;
   --bg-accent:#484a4d;
   --nav-size:60px;
