--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
-body {
+ body {
+  list-style-type: none;
     margin: 0;
     background: #151616;
     font-family: roboto;
@@ -22,7 +23,7 @@ body {
     --speed: 500ms; 
   }
   
-  /* ul {
+  ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -31,28 +32,58 @@ body {
   a {
     color: var(--text-color);
     text-decoration: none;;
-  } */
+  }
   
-  /* Top Navigation Bar */
-  
-  /* <nav> */
   .navbar{
-    border: var(--border);
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    border-bottom: var(--border);
+    height:var(--nav-size);
+    padding: 0 1rem;
     background-color: var(--bg);
-    height: var(--nav-size);
+    display: flex;
+    justify-content: space-between;
+    z-index: 10;
   }
 
-  .navbar-nav{
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  .navbar-mid{
+    display: flex;
+  }
+
+  .navbar-right{
+    max-width:100%;
+    height: 100%;
     display: flex;
     justify-content: flex-end;
-    align-content: center;
+  }
+
+  .icon-button {
+    --button-size: calc(var(--nav-size) * 0.5);
+    width: var(--button-size);
+    height: var(--button-size);
+    background-color: #484a4d;
+    border-radius: 50%;
+    padding: 5px;
+    margin: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: filter 300ms;
+  }
+  
+  .icon-button:hover {
+    filter: brightness(1.2);
+  }
+  
+  .icon-button svg { 
+    fill: var(--text-color);
+    width: 20px;
+    height: 20px;
   }
 
 
-  /* CSSTransition classes  */
   .menu-primary-enter {
     position: absolute;
     transform: translateX(-110%);
@@ -77,9 +108,9 @@ body {
     transform: translateX(0%);
     transition: all var(--speed) ease;
   }
-  .menu-secondary-exit {
+  /* .menu-secondary-exit {
   
-  }
+  } */
   .menu-secondary-exit-active {
     transform: translateX(110%);
     transition: all var(--speed) ease;
