--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,3 +1,13 @@
+:root {
+    --bg:  #242526;
+    --bg-accent: #484a4d;
+    --text-color: #dadce1;
+    --nav-size: 60px;
+    --border: 1px solid #474a4d;
+    --border-radius: 8px;
+    --speed: 500ms; 
+  }
+
 .menu-bars{
     padding: 0 16px;
     font-size:2rem;
@@ -5,112 +15,23 @@
 }
 
 .nav-menu{
-    background-color: #9240FF;
-    color:#9240FF;
-    top: 0;
-    width: 4.5%;
-    height: 800px;
-    position: fixed;
-    display: flex;
-    transition: 850ms;
-}
-
-.nav-menu.active{
-    color: #9240FF;
-    width: 20%;
-    left:0;
-    transition: 350ms;
-}
-
-.nav-text{
-    display:flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 8px 0px 8px 16px;
-    list-style: none;
-    height:60px;
-}
-
-.nav-text {
-    text-decoration: none;
-    color:aliceblue;
-    font-size: 18px;
-    width:100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    border-radius: 4px;
-}
-
-.nav-text:hover{
-    background-color: #fff;
-    margin-left: 10px;
-    color: blue;
-}
-
-.nav-menu-items {
-    width:100%;
-}
-
-.sidebar-toggle{
-    background-color: #9240FF;
-    color:#fff;
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-span{
-    margin-left:16px;
-}
-
-
-.react-icons{
-    color: #fff;
-}
-
-.react-icons:hover{
-    color: black;
-}
-.tooltip{
-    position: relative;
-}
-
-.tooltip .tooltiptext{
-    visibility: hidden;
-    width:120px;
-    background-color: black;
-    color:#fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-
-    position:absolute;
+    border-right: 1px solid #474a4d;
+    background-color: #242526;
+    width:320px;
+    height:100%;
+    position:fixed;
+    margin: 0;
+    padding: 0;
     z-index: 1;
+    gap:10px;
 }
 
-.tooltip:hover .tooltiptext{
-    visibility: visible;
+.nav-menu-name{
+    color:#fff;
+    margin: 1rem;
 }
 
-/* .menu-primary-enter{*/
-/*    position: absolute;*/
-/*    transform:translateY(-110%);*/
-/*}*/
-
-/*.menu-primary-enter-active{*/
-/*    transform:translateY(0%);*/
-/*    transition:all 100ms ease;*/
-/*}*/
-
-/*.menu-primary-exit{*/
-/*    position: absolute;*/
-/*}*/
-
-/*.menu-primary-exit-active{*/
-/*    transform: translateY(-110%);*/
-/*    transition: all 100ms ease;*/
-/*} */
+.nav-menu-items{
+    overflow-x: hidden;
+    overflow-y: auto;
+}
